--- a/app/src/main/res/layout/activity_lista_estudiante.xml
+++ b/app/src/main/res/layout/activity_lista_estudiante.xml
@@ -35,4 +35,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.388" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/menNavVie"
+        android:layout_width="392dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginLeft="19dp"
+        android:background="@android:color/darker_gray"
+        app:itemHorizontalTranslationEnabled="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/menu_estudiante" />
 </androidx.constraintlayout.widget.ConstraintLayout>
