--- a/app/src/main/res/layout/activity_estudiante.xml
+++ b/app/src/main/res/layout/activity_estudiante.xml
@@ -11,7 +11,8 @@
         android:id="@+id/imgFotEst"
         android:layout_width="118dp"
         android:layout_height="99dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
         android:contentDescription="@string/frmLogin_logo"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/txtNomEst"
@@ -25,7 +26,8 @@
     <EditText
         android:id="@+id/txtNomEst"
         android:layout_width="320dp"
-        android:layout_height="0dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="45dp"
         android:layout_marginBottom="20dp"
         android:autofillHints="@string/frmEstudiante_nombre"
         android:ems="10"
@@ -34,7 +36,8 @@
         app:layout_constraintBottom_toTopOf="@+id/txtApeEst"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgFotEst" />
 
     <EditText
         android:id="@+id/txtApeEst"
